--- a/Digital_Oscilloscope.ioc
+++ b/Digital_Oscilloscope.ioc
@@ -1,8 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
 ADC3.ContinuousConvMode=ENABLE
 ADC3.DMAContinuousRequests=ENABLE
-ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,ClockPrescaler
 ADC3.NbrOfConversionFlag=1
 ADC3.Rank-0\#ChannelRegularConversion=1
 ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
@@ -32,7 +33,7 @@ Dma.Request0=ADC3
 Dma.Request1=DAC2
 Dma.RequestsNb=2
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC3
@@ -107,18 +108,19 @@ Mcu.Pin57=PG10
 Mcu.Pin58=PG11
 Mcu.Pin59=PG12
 Mcu.Pin6=PF6
-Mcu.Pin60=PG15
-Mcu.Pin61=PB3
-Mcu.Pin62=PB4
-Mcu.Pin63=PB8
-Mcu.Pin64=PB9
-Mcu.Pin65=VP_DMA2D_VS_DMA2D
-Mcu.Pin66=VP_SYS_VS_Systick
-Mcu.Pin67=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin60=PG13
+Mcu.Pin61=PG15
+Mcu.Pin62=PB3
+Mcu.Pin63=PB4
+Mcu.Pin64=PB8
+Mcu.Pin65=PB9
+Mcu.Pin66=VP_DMA2D_VS_DMA2D
+Mcu.Pin67=VP_SYS_VS_Systick
+Mcu.Pin68=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin7=PF10
 Mcu.Pin8=PH0/OSC_IN
 Mcu.Pin9=PH1/OSC_OUT
-Mcu.PinsNb=68
+Mcu.PinsNb=69
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -223,6 +225,10 @@ PG11.Mode=RGB565
 PG11.Signal=LTDC_B3
 PG12.Mode=RGB565
 PG12.Signal=LTDC_B4
+PG13.GPIOParameters=GPIO_Speed
+PG13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PG13.Locked=true
+PG13.Signal=GPIO_Output
 PG15.Signal=FMC_SDNCAS
 PG4.Signal=FMC_A14_BA0
 PG5.Signal=FMC_A15_BA1
@@ -269,9 +275,9 @@ RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=45000000
 RCC.APB1TimFreq_Value=90000000
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=90000000
-RCC.APB2TimFreq_Value=180000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV8
+RCC.APB2Freq_Value=22500000
+RCC.APB2TimFreq_Value=45000000
 RCC.CortexFreq_Value=180000000
 RCC.EthernetFreq_Value=180000000
 RCC.FCLKCortexFreq_Value=180000000
@@ -377,7 +383,7 @@ SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda1
 SH.FMC_SDNRAS.ConfNb=1
 SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
 SH.FMC_SDNWE.ConfNb=1
-SPI1.CalculateBaudRate=45.0 MBits/s
+SPI1.CalculateBaudRate=11.25 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
